# mental-health-chatbot

./: .gitignore  README.md  agent.py  main.py  pyproject.toml  requirements.txt
static/: script.js  style.css
templates/: index.html
